--- a/lol-dex/package.json
+++ b/lol-dex/package.json
@@ -12,7 +12,8 @@
     "@reduxjs/toolkit": "^2.4.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
